--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,28 +50,36 @@ jobs:
           check-latest: true
           cache: true
 
-      - run: go version
-      - run: go mod download
-      - run: go vet ./...
+      - name: Go version
+        run: go version
 
-      - name: Run golangci-lint
+      - name: Download deps
+        run: go mod download
+
+      - name: Go vet
+        run: go vet ./...
+
+      - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.60.3
+          # IMPORTANT: v2.7.2 is not a real release -> use a real one
+          version: v2.1.6
           args: --timeout=5m ./...
 
-      - name: Run tests
+      - name: Run tests (race + coverage)
         env:
-          DATABASE_URL: postgres://devops:devops@localhost:5432/whoknows?sslmode=disable
+          DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
+          TEST_DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
         run: |
           go test -v -race ./... \
             -coverpkg=./cmd/server,./handlers,./internal/db \
             -coverprofile=coverage.out
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload coverage (artifact)
         if: hashFiles('coverage.out') != ''
+        uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-${{ matrix.go-version }}
           path: coverage.out
 
   # -------------------------
@@ -87,7 +95,7 @@ jobs:
           dockerfile: Dockerfile
 
   # -------------------------
-  # Health check (local)
+  # Health / smoke test (local)
   # -------------------------
   healthz:
     needs: build
@@ -105,7 +113,8 @@ jobs:
           POSTGRES_USER: devops
           POSTGRES_PASSWORD: devops
           POSTGRES_DB: whoknows
-        ports: ["5432:5432"]
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd="pg_isready -U devops -d whoknows"
           --health-interval=10s
@@ -114,6 +123,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-go@v5
         with:
           go-version: "1.25.x"
@@ -123,35 +133,42 @@ jobs:
       - name: Build server
         run: go build -o server ./cmd/server
 
-      - name: Start server + hit /healthz
+      - name: Start server
         env:
-          DATABASE_URL: postgres://devops:devops@localhost:5432/whoknows?sslmode=disable
+          DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
           SESSION_KEY: ci-session-key-0123456789-abcdefghijklmnopqrstuvwxyz
-          DMI_API_KEY: dummy-ci-key
           APP_ENV: prod
-          PORT: "8080"
         run: |
           nohup ./server > app.log 2>&1 &
           echo $! > app.pid
           sleep 2
-          curl -fsS http://127.0.0.1:8080/healthz
-          kill "$(cat app.pid)" || true
 
-      - uses: actions/upload-artifact@v4
+      - name: Smoke test /healthz and /readyz
+        run: |
+          curl -fsS http://127.0.0.1:8080/healthz
+          curl -fsS http://127.0.0.1:8080/readyz | grep -qx 'ready'
+
+      - name: Stop server
         if: always()
+        run: |
+          if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
+          sleep 1
+
+      - name: Upload app.log
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: app-log
           path: app.log
 
   # -------------------------
-  # Compose integration (uses docker-compose.yml)
+  # Compose-based integration (uses our docker-compose.yml)
   # -------------------------
   compose-integration:
     needs: build
     runs-on: ubuntu-latest
 
     env:
-      APP_IMAGE_TAG: ${{ github.sha }}
       POSTGRES_USER: devops
       POSTGRES_PASSWORD: devops
       POSTGRES_DB: whoknows
@@ -160,23 +177,41 @@ jobs:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
 
+      
+      NODE_EXPORTER_IMAGE: prom/node-exporter:v1.8.2
+      PROMETHEUS_IMAGE: prom/prometheus:v2.54.1
+      GRAFANA_IMAGE: grafana/grafana:12.3.0
+
+      APP_ENV: prod
+      PORT: "8080"
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build image with the same tag compose expects
+      - name: Build Docker image for compose
         run: docker build -t ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }} .
 
-      - name: Write .env for compose
+      - name: Write .env for docker compose (CI)
         run: |
           cat > .env <<EOF
-          APP_IMAGE_TAG=${APP_IMAGE_TAG}
+          APP_IMAGE_TAG=${{ github.sha }}
+
           POSTGRES_USER=${POSTGRES_USER}
           POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
           POSTGRES_DB=${POSTGRES_DB}
+
           SESSION_KEY=${SESSION_KEY}
           DMI_API_KEY=${DMI_API_KEY}
+
           GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
           GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+
+          NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
+          PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
+          GRAFANA_IMAGE=${GRAFANA_IMAGE}
+
+          APP_ENV=${APP_ENV}
+          PORT=${PORT}
           EOF
 
       - name: Start app + postgres (compose)
@@ -184,13 +219,15 @@ jobs:
 
       - name: Wait for /readyz
         run: |
-          for i in $(seq 1 60); do
+          for i in $(seq 1 90); do
             if curl -fsS http://127.0.0.1:8080/readyz | grep -qx 'ready'; then
+              echo "ready"
               exit 0
             fi
             sleep 1
           done
-          docker compose logs --no-color --tail=200
+          echo "readyz never became ready" >&2
+          docker compose logs --no-color --tail=200 >&2 || true
           exit 1
 
       - name: Tear down
@@ -198,41 +235,45 @@ jobs:
         run: docker compose down -v
 
   # -------------------------
-  # Docker build & push (only on push to main)
+  # Build & push Docker image (only on push to main)
   # -------------------------
   docker-build:
     needs: [build, hadolint, healthz, compose-integration]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
     permissions:
-      packages: write
       contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: docker/login-action@v3
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: docker/build-push-action@v6
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: |
             ghcr.io/gitdengas123456/devops-valgfag:latest
+            ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }}
 
   # -------------------------
-  # Deploy (only on push to main)
+  # Deploy to VM via SSH (compose + .env)
   # -------------------------
   deploy:
     needs: docker-build
     runs-on: ubuntu-latest
     environment: produktion
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -240,43 +281,67 @@ jobs:
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
         env:
+          
           DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
+
+          
           POSTGRES_USER: ${{ vars.POSTGRES_USER }}
-          POSTGRES_DB: ${{ vars.POSTGRES_DB }}
-          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+
           SESSION_KEY: ${{ secrets.SESSION_KEY }}
           DMI_API_KEY: ${{ secrets.DMI_API_KEY }}
+
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
+
+          
+          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG }}
+          NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE }}
+          PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE }}
+          GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE }}
+
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ vars.PROD_SSH_PORT }}
-          envs: DEPLOY_PATH,POSTGRES_USER,POSTGRES_DB,POSTGRES_PASSWORD,SESSION_KEY,DMI_API_KEY,GF_SECURITY_ADMIN_USER,GF_SECURITY_ADMIN_PASSWORD,APP_IMAGE_TAG
+
+        
+          envs: DEPLOY_PATH,POSTGRES_USER,POSTGRES_PASSWORD,POSTGRES_DB,SESSION_KEY,DMI_API_KEY,GF_SECURITY_ADMIN_USER,GF_SECURITY_ADMIN_PASSWORD,APP_IMAGE_TAG,NODE_EXPORTER_IMAGE,PROMETHEUS_IMAGE,GRAFANA_IMAGE
 
           script: |
-            set -e
+            set -euo pipefail
 
-            if [ -z "${DEPLOY_PATH}" ]; then
-              echo "Missing DEPLOY_PATH (vars) in environment 'produktion'"
+            # Default to your known path if vars.DEPLOY_PATH isn't set yet
+            DEPLOY_PATH="${DEPLOY_PATH:-/home/adminuser/DevOps-Valgfag}"
+
+            # Basic preflight
+            if [ -z "${POSTGRES_USER:-}" ] || [ -z "${POSTGRES_DB:-}" ] || [ -z "${POSTGRES_PASSWORD:-}" ]; then
+              echo "Missing POSTGRES_USER/POSTGRES_DB (vars) or POSTGRES_PASSWORD (secret) in environment 'produktion'"
+              exit 1
+            fi
+            if [ -z "${SESSION_KEY:-}" ] || [ -z "${DMI_API_KEY:-}" ]; then
+              echo "Missing SESSION_KEY or DMI_API_KEY (secrets) in environment 'produktion'"
+              exit 1
+            fi
+            if [ -z "${GF_SECURITY_ADMIN_USER:-}" ] || [ -z "${GF_SECURITY_ADMIN_PASSWORD:-}" ]; then
+              echo "Missing GF_SECURITY_ADMIN_USER/GF_SECURITY_ADMIN_PASSWORD (secrets) in environment 'produktion'"
               exit 1
             fi
 
+            echo "==> cd ${DEPLOY_PATH}"
             cd "${DEPLOY_PATH}"
 
-            # keep VM in sync with repo
+            echo "==> Sync repo to origin/main..."
             git fetch origin main
             git reset --hard origin/main
 
-            # write .env required by docker-compose.yml
+            echo "==> Write .env"
             umask 077
             cat > .env <<EOF
             APP_ENV=prod
             PORT=8080
-
-            APP_IMAGE_TAG=${APP_IMAGE_TAG}
 
             POSTGRES_USER=${POSTGRES_USER}
             POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -287,8 +352,16 @@ jobs:
 
             GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
             GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+
+            APP_IMAGE_TAG=${APP_IMAGE_TAG:-latest}
+            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE:-prom/node-exporter:v1.8.2}
+            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE:-prom/prometheus:v2.54.1}
+            GRAFANA_IMAGE=${GRAFANA_IMAGE:-grafana/grafana:12.3.0}
             EOF
             chmod 600 .env
 
+            echo "==> Pull + up"
             docker compose pull
             docker compose up -d --remove-orphans
+
+            echo "==> Done"
