--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,34 +50,30 @@ jobs:
           check-latest: true
           cache: true
 
-      - name: Go version
-        run: go version
+      - run: go version
+      - run: go mod download
+      - run: go vet ./...
 
-      - name: Download deps
-        run: go mod download
-
-      - name: Go vet
-        run: go vet ./...
-
-      - name: golangci-lint
+      # IMPORTANT:
+      # golangci-lint binary is currently built with Go 1.24, while repo targets Go 1.25.
+      # Force golangci-lint to target Go 1.24 until a golangci-lint build with Go >= 1.25 exists.
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          # IMPORTANT: v2.7.2 is not a real release -> use a real one
           version: v2.1.6
-          args: --timeout=5m ./...
+          args: --go=1.24 --timeout=5m ./...
 
-      - name: Run tests (race + coverage)
+      - name: Run tests
         env:
-          DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
-          TEST_DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
+          DATABASE_URL: postgres://devops:devops@localhost:5432/whoknows?sslmode=disable
+          TEST_DATABASE_URL: postgres://devops:devops@localhost:5432/whoknows?sslmode=disable
         run: |
           go test -v -race ./... \
             -coverpkg=./cmd/server,./handlers,./internal/db \
             -coverprofile=coverage.out
 
-      - name: Upload coverage (artifact)
+      - uses: actions/upload-artifact@v4
         if: hashFiles('coverage.out') != ''
-        uses: actions/upload-artifact@v4
         with:
           name: coverage-${{ matrix.go-version }}
           path: coverage.out
@@ -95,7 +91,7 @@ jobs:
           dockerfile: Dockerfile
 
   # -------------------------
-  # Health / smoke test (local)
+  # Health / smoke test (native binary)
   # -------------------------
   healthz:
     needs: build
@@ -130,8 +126,7 @@ jobs:
           check-latest: true
           cache: true
 
-      - name: Build server
-        run: go build -o server ./cmd/server
+      - run: go build -o server ./cmd/server
 
       - name: Start server
         env:
@@ -143,10 +138,10 @@ jobs:
           echo $! > app.pid
           sleep 2
 
-      - name: Smoke test /healthz and /readyz
-        run: |
-          curl -fsS http://127.0.0.1:8080/healthz
-          curl -fsS http://127.0.0.1:8080/readyz | grep -qx 'ready'
+      - name: Smoke test /healthz, /readyz, /metrics
+        env:
+          BASE_URL: http://127.0.0.1:8080
+        run: scripts/smoke.sh
 
       - name: Stop server
         if: always()
@@ -154,36 +149,40 @@ jobs:
           if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
           sleep 1
 
-      - name: Upload app.log
+      - uses: actions/upload-artifact@v4
         if: always()
-        uses: actions/upload-artifact@v4
         with:
           name: app-log
           path: app.log
 
   # -------------------------
-  # Compose-based integration (uses our docker-compose.yml)
+  # Compose-based integration (app + postgres_db)
   # -------------------------
   compose-integration:
     needs: build
     runs-on: ubuntu-latest
 
     env:
+      # must satisfy docker-compose.yml requirements
+      APP_IMAGE_TAG: ${{ github.sha }}
+
       POSTGRES_USER: devops
       POSTGRES_PASSWORD: devops
       POSTGRES_DB: whoknows
+
       SESSION_KEY: ci-session-key-0123456789-abcdefghijklmnopqrstuvwxyz
       DMI_API_KEY: dummy-ci-key
+
+      # required by grafana in compose
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
 
-      
+      # optional images (compose has defaults, but we can set stable values)
       NODE_EXPORTER_IMAGE: prom/node-exporter:v1.8.2
       PROMETHEUS_IMAGE: prom/prometheus:v2.54.1
       GRAFANA_IMAGE: grafana/grafana:12.3.0
 
       APP_ENV: prod
-      PORT: "8080"
 
     steps:
       - uses: actions/checkout@v4
@@ -191,10 +190,10 @@ jobs:
       - name: Build Docker image for compose
         run: docker build -t ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }} .
 
-      - name: Write .env for docker compose (CI)
+      - name: Write .env for docker compose
         run: |
           cat > .env <<EOF
-          APP_IMAGE_TAG=${{ github.sha }}
+          APP_IMAGE_TAG=${APP_IMAGE_TAG}
 
           POSTGRES_USER=${POSTGRES_USER}
           POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -211,17 +210,16 @@ jobs:
           GRAFANA_IMAGE=${GRAFANA_IMAGE}
 
           APP_ENV=${APP_ENV}
-          PORT=${PORT}
           EOF
 
-      - name: Start app + postgres (compose)
+      - name: Start only app + db (faster)
         run: docker compose up -d whoknows-app postgres_db
 
       - name: Wait for /readyz
         run: |
-          for i in $(seq 1 90); do
+          for i in $(seq 1 60); do
             if curl -fsS http://127.0.0.1:8080/readyz | grep -qx 'ready'; then
-              echo "ready"
+              echo "readyz is ready"
               exit 0
             fi
             sleep 1
@@ -230,7 +228,18 @@ jobs:
           docker compose logs --no-color --tail=200 >&2 || true
           exit 1
 
-      - name: Tear down
+      - name: Run smoke tests
+        env:
+          BASE_URL: http://127.0.0.1:8080
+        run: scripts/smoke.sh
+
+      - name: Dump compose state on failure
+        if: failure()
+        run: |
+          docker compose ps || true
+          docker compose logs --no-color --tail=200 || true
+
+      - name: Tear down compose stack
         if: always()
         run: docker compose down -v
 
@@ -241,6 +250,7 @@ jobs:
     needs: [build, hadolint, healthz, compose-integration]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
     permissions:
       contents: read
       packages: write
@@ -248,21 +258,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: |
             ghcr.io/gitdengas123456/devops-valgfag:latest
-            ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }}
 
   # -------------------------
   # Deploy to VM via SSH (compose + .env)
@@ -272,6 +279,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: produktion
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
     permissions:
       contents: read
 
@@ -281,63 +289,65 @@ jobs:
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
         env:
-          
-          DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
-
-          
+          # VM/repo path (YOU should set vars.DEPLOY_PATH = /home/adminuser/DevOps-Valgfag)
+          # DB + required app secrets
           POSTGRES_USER: ${{ vars.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
           SESSION_KEY: ${{ secrets.SESSION_KEY }}
           DMI_API_KEY: ${{ secrets.DMI_API_KEY }}
 
+          # required by grafana in compose
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
 
-          
+          # image tags/config
           APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG }}
           NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE }}
           PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE }}
           GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE }}
-
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ vars.PROD_SSH_PORT }}
 
-        
-          envs: DEPLOY_PATH,POSTGRES_USER,POSTGRES_PASSWORD,POSTGRES_DB,SESSION_KEY,DMI_API_KEY,GF_SECURITY_ADMIN_USER,GF_SECURITY_ADMIN_PASSWORD,APP_IMAGE_TAG,NODE_EXPORTER_IMAGE,PROMETHEUS_IMAGE,GRAFANA_IMAGE
+          # IMPORTANT: without envs:, variables won't be available on the VM script side
+          envs: >-
+            POSTGRES_USER,POSTGRES_DB,POSTGRES_PASSWORD,
+            SESSION_KEY,DMI_API_KEY,
+            GF_SECURITY_ADMIN_USER,GF_SECURITY_ADMIN_PASSWORD,
+            APP_IMAGE_TAG,NODE_EXPORTER_IMAGE,PROMETHEUS_IMAGE,GRAFANA_IMAGE
 
           script: |
-            set -euo pipefail
+            set -e
 
-            # Default to your known path if vars.DEPLOY_PATH isn't set yet
-            DEPLOY_PATH="${DEPLOY_PATH:-/home/adminuser/DevOps-Valgfag}"
-
-            # Basic preflight
-            if [ -z "${POSTGRES_USER:-}" ] || [ -z "${POSTGRES_DB:-}" ] || [ -z "${POSTGRES_PASSWORD:-}" ]; then
+            if [ -z "${POSTGRES_USER}" ] || [ -z "${POSTGRES_DB}" ] || [ -z "${POSTGRES_PASSWORD}" ]; then
               echo "Missing POSTGRES_USER/POSTGRES_DB (vars) or POSTGRES_PASSWORD (secret) in environment 'produktion'"
               exit 1
             fi
-            if [ -z "${SESSION_KEY:-}" ] || [ -z "${DMI_API_KEY:-}" ]; then
-              echo "Missing SESSION_KEY or DMI_API_KEY (secrets) in environment 'produktion'"
+            if [ -z "${SESSION_KEY}" ] || [ -z "${DMI_API_KEY}" ]; then
+              echo "Missing SESSION_KEY or DMI_API_KEY in environment 'produktion'"
               exit 1
             fi
-            if [ -z "${GF_SECURITY_ADMIN_USER:-}" ] || [ -z "${GF_SECURITY_ADMIN_PASSWORD:-}" ]; then
-              echo "Missing GF_SECURITY_ADMIN_USER/GF_SECURITY_ADMIN_PASSWORD (secrets) in environment 'produktion'"
+            if [ -z "${GF_SECURITY_ADMIN_USER}" ] || [ -z "${GF_SECURITY_ADMIN_PASSWORD}" ]; then
+              echo "Missing GF_SECURITY_ADMIN_USER or GF_SECURITY_ADMIN_PASSWORD (secrets) in environment 'produktion'"
+              exit 1
+            fi
+            if [ -z "${APP_IMAGE_TAG}" ]; then
+              echo "Missing APP_IMAGE_TAG (vars) in environment 'produktion'"
               exit 1
             fi
 
-            echo "==> cd ${DEPLOY_PATH}"
-            cd "${DEPLOY_PATH}"
+            echo "==> Going to app folder on VM..."
+            cd ${{ vars.DEPLOY_PATH }}
 
             echo "==> Sync repo to origin/main..."
             git fetch origin main
             git reset --hard origin/main
 
-            echo "==> Write .env"
+            echo "==> Writing .env on VM..."
             umask 077
             cat > .env <<EOF
             APP_ENV=prod
@@ -353,15 +363,20 @@ jobs:
             GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
             GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
 
-            APP_IMAGE_TAG=${APP_IMAGE_TAG:-latest}
-            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE:-prom/node-exporter:v1.8.2}
-            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE:-prom/prometheus:v2.54.1}
-            GRAFANA_IMAGE=${GRAFANA_IMAGE:-grafana/grafana:12.3.0}
+            APP_IMAGE_TAG=${APP_IMAGE_TAG}
+            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
+            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
+            GRAFANA_IMAGE=${GRAFANA_IMAGE}
             EOF
             chmod 600 .env
 
-            echo "==> Pull + up"
+            echo "==> Pulling latest image from GHCR..."
             docker compose pull
+
+            echo "==> Starting/restarting compose stack..."
             docker compose up -d --remove-orphans
 
-            echo "==> Done"
+            echo "==> Cleaning up old images..."
+            docker image prune -f
+
+            echo "Deployment finished."
