--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # -------------------------
+  # Build + lint + tests
+  # -------------------------
   build:
     runs-on: ubuntu-latest
 
@@ -49,12 +52,6 @@ jobs:
 
       - run: go version
       - run: go mod download
-
-      - name: Ensure modules are tidy
-        run: |
-          go mod tidy
-          git diff --exit-code
-
       - run: go vet ./...
 
       - name: Run golangci-lint
@@ -78,6 +75,9 @@ jobs:
           name: coverage-${{ matrix.go-version }}
           path: coverage.out
 
+  # -------------------------
+  # Dockerfile lint
+  # -------------------------
   hadolint:
     needs: build
     runs-on: ubuntu-latest
@@ -87,6 +87,9 @@ jobs:
         with:
           dockerfile: Dockerfile
 
+  # -------------------------
+  # Health / smoke test (native binary)
+  # -------------------------
   healthz:
     needs: build
     runs-on: ubuntu-latest
@@ -125,7 +128,7 @@ jobs:
       - name: Start server
         env:
           PORT: "8080"
-          DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
+          DATABASE_URL: postgres://devops:devops@localhost:5432/whoknows?sslmode=disable
           SESSION_KEY: ci-session-key-0123456789-abcdefghijklmnopqrstuvwxyz
           DMI_API_KEY: dummy-ci-key
           APP_ENV: prod
@@ -134,22 +137,15 @@ jobs:
           echo $! > app.pid
           sleep 2
 
-      - name: Smoke test /healthz, /readyz, /metrics
+      - name: Smoke test
         env:
           BASE_URL: http://127.0.0.1:8080
         run: scripts/smoke.sh
-
-      - name: Show app.log on failure
-        if: failure()
-        run: |
-          echo "----- app.log -----"
-          sed -n '1,200p' app.log || true
 
       - name: Stop server
         if: always()
         run: |
           if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
-          sleep 1
 
       - uses: actions/upload-artifact@v4
         if: always()
@@ -157,31 +153,32 @@ jobs:
           name: app-log
           path: app.log
 
+  # -------------------------
+  # Compose-based integration (app + postgres_db)
+  # -------------------------
   compose-integration:
     needs: build
     runs-on: ubuntu-latest
 
     env:
       APP_IMAGE_TAG: ${{ github.sha }}
-
       POSTGRES_USER: devops
       POSTGRES_PASSWORD: devops
       POSTGRES_DB: whoknows
-
       SESSION_KEY: ci-session-key-0123456789-abcdefghijklmnopqrstuvwxyz
       DMI_API_KEY: dummy-ci-key
-
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
-
       NODE_EXPORTER_IMAGE: prom/node-exporter:v1.8.2
       PROMETHEUS_IMAGE: prom/prometheus:v2.54.1
       GRAFANA_IMAGE: grafana/grafana:12.3.0
-
       APP_ENV: prod
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Go module tidy (so Docker build won't fail)
+        run: go mod tidy
 
       - name: Build Docker image for compose
         run: docker build -t ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }} .
@@ -190,38 +187,31 @@ jobs:
         run: |
           cat > .env <<EOF
           APP_IMAGE_TAG=${APP_IMAGE_TAG}
-
           POSTGRES_USER=${POSTGRES_USER}
           POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
           POSTGRES_DB=${POSTGRES_DB}
-
           SESSION_KEY=${SESSION_KEY}
           DMI_API_KEY=${DMI_API_KEY}
-
           GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
           GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
-
           NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
           PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
           GRAFANA_IMAGE=${GRAFANA_IMAGE}
-
           APP_ENV=${APP_ENV}
           EOF
 
-      - name: Start only app + db (faster)
+      - name: Start only app + db
         run: docker compose up -d whoknows-app postgres_db
 
       - name: Wait for /readyz
         run: |
           for i in $(seq 1 60); do
             if curl -fsS http://127.0.0.1:8080/readyz | grep -qx 'ready'; then
-              echo "readyz is ready"
               exit 0
             fi
             sleep 1
           done
-          echo "readyz never became ready" >&2
-          docker compose logs --no-color --tail=200 >&2 || true
+          docker compose logs --no-color --tail=200
           exit 1
 
       - name: Run smoke tests
@@ -229,16 +219,13 @@ jobs:
           BASE_URL: http://127.0.0.1:8080
         run: scripts/smoke.sh
 
-      - name: Dump compose state on failure
-        if: failure()
-        run: |
-          docker compose ps || true
-          docker compose logs --no-color --tail=200 || true
-
       - name: Tear down compose stack
         if: always()
         run: docker compose down -v
 
+  # -------------------------
+  # Build & push Docker image
+  # -------------------------
   docker-build:
     needs: [build, hadolint, healthz, compose-integration]
     runs-on: ubuntu-latest
@@ -251,6 +238,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Go module tidy (so Docker build won't fail)
+        run: go mod tidy
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -261,24 +251,23 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ghcr.io/gitdengas123456/devops-valgfag:latest
+          tags: ghcr.io/gitdengas123456/devops-valgfag:latest
 
+  # -------------------------
+  # Deploy to VM via SSH
+  # -------------------------
   deploy:
     needs: docker-build
     runs-on: ubuntu-latest
     environment: produktion
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
-    permissions:
-      contents: read
-
     steps:
-      - uses: actions/checkout@v4
-
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
         env:
+          DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
+
           POSTGRES_USER: ${{ vars.POSTGRES_USER }}
           POSTGRES_DB: ${{ vars.POSTGRES_DB }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
@@ -289,25 +278,22 @@ jobs:
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
 
-          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG }}
-          NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE }}
-          PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE }}
-          GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE }}
+          APP_IMAGE_TAG: latest
+
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ vars.PROD_SSH_PORT }}
-
           envs: >-
+            DEPLOY_PATH,
             POSTGRES_USER,POSTGRES_DB,POSTGRES_PASSWORD,
             SESSION_KEY,DMI_API_KEY,
             GF_SECURITY_ADMIN_USER,GF_SECURITY_ADMIN_PASSWORD,
-            APP_IMAGE_TAG,NODE_EXPORTER_IMAGE,PROMETHEUS_IMAGE,GRAFANA_IMAGE
-
+            APP_IMAGE_TAG
           script: |
             set -e
-            cd ${{ vars.DEPLOY_PATH }}
+            cd "${DEPLOY_PATH}"
             git fetch origin main
             git reset --hard origin/main
 
@@ -315,21 +301,14 @@ jobs:
             cat > .env <<EOF
             APP_ENV=prod
             PORT=8080
-
             POSTGRES_USER=${POSTGRES_USER}
             POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
             POSTGRES_DB=${POSTGRES_DB}
-
             SESSION_KEY=${SESSION_KEY}
             DMI_API_KEY=${DMI_API_KEY}
-
             GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
             GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
-
             APP_IMAGE_TAG=${APP_IMAGE_TAG}
-            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
-            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
-            GRAFANA_IMAGE=${GRAFANA_IMAGE}
             EOF
             chmod 600 .env
 
