--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,13 +86,13 @@ services:
     restart: unless-stopped
 
   prometheus:
-    image: ${PROMETHEUS_IMAGE:-prom/prometheus:v2.54.1} # pin a version, avoid :latest
+    image: ${PROMETHEUS_IMAGE:-prom/prometheus:v2.54.1}
     container_name: prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
       - "--web.external-url=/prometheus"
-      - "--web.route-prefix=/prometheus"
+      - "--web.route-prefix=/"
     ports:
       - "9090:9090"
     volumes:
