--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   whoknows-app:
     build: .
+    # Note: we intentionally specify both `build` and `image`:
+    # - `build: .` builds the image locally from this directory.
+    # - `image: ghcr.io/gitdengas123456/devops-valgfag:${APP_IMAGE_TAG}` is the canonical name/tag.
     image: ghcr.io/gitdengas123456/devops-valgfag:${APP_IMAGE_TAG:?set APP_IMAGE_TAG in .env (e.g. latest, v1.2.3 or commit SHA)}
     container_name: whoknows-app
     ports:
